# singing-wind

./: '  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  unity_build.cmake
assets/: assets.cmake
assets/scripts/: map.py
engine/: engine.cmake
engine/include/: AIComponent.h  StatusEffectComponent.h  WBehaviourTree.h  WInput.h  WindDefs.h  ai_state_transitions.h
engine/src/: AIComponent.cpp  CPruneSweep.cpp  Components.cpp  EditorDraw.cpp  Pathfinding.cpp  SceneIO.cpp  SimpleFlyer.cpp
gameplay/: gameplay.cmake
gameplay/scenes/: debug.wscn  player_swim.went
gameplay/skills/: Melee.h
include/: AIComponent.h  AIs.h  Actor.h  AlertBubble.h  AliveComponent.h  BCurve.h  Behaviours.h  CPruneSweep.h  Camera.h  CanSee.h  ColGrid.h  ColShape.h  Collision.h  CollisionComponent.h  CollisionTest.h  Components.h  DebugDrawSystem.h  Editor.h  EditorDraw.h  EditorStates.h  EnemyInRange.h  Engine.h  Entity.h  EntityEditor.h  FrameTimer.h  Game.h  GameWorld.h  GoToEnemy.h  HealthComponent.h  HoldDistance.h  HurtBoxComponent.h  Idle.h  InputComponent.h  Inverter.h  IsAggro.h  Island.h  LifeTimeComponent.h  Lounge.h  MakeAggroIf.h  MoveSystems.h  (+43 more)
scenes/: PatternEnemy.went  TestEnemy.went  debug.wscn  player.went  steering.wscn
schemas/: entity.fbs  scene.fbs
shaders/: textured.fs.glsl  textured.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
skills/: Lounge.cpp  Lounge.h  Melee.cpp  Melee.h
src/: AIComponent.cpp  AIs.cpp  Actor.cpp  AlertBubble.cpp  AliveComponent.cpp  BCurve.cpp  CPruneSweep.cpp  Camera.cpp  CanSee.cpp  ColGrid.cpp  ColShape.cpp  Collision.cpp  CollisionComponent.cpp  CollisionTest.cpp  DebugDrawSystem.cpp  Editor.cpp  EditorDraw.cpp  EditorStates.cpp  EnemyInRange.cpp  Engine.cpp  Entity.cpp  EntityEditor.cpp  FrameTimer.cpp  Game.cpp  GameWorld.cpp  GoToEnemy.cpp  HealthComponent.cpp  HoldDistance.cpp  HurtBoxComponent.cpp  Idle.cpp  InputComponent.cpp  IsAggro.cpp  Island.cpp  Lounge.cpp  MakeAggroIf.cpp  Melee.cpp  MoveSystems.cpp  NTimes.cpp  NavMesh.cpp  Pathfinding.cpp  (+49 more)
src/behaviours/: NTimes.cpp  NTimes.h  RepeatUntilFail.h  behaviours.cmake
src/collision/: col_shape.cpp  col_shape.h  collision.cpp  collision.h  convex_shape.cpp  convex_shape.h  epa.cpp  epa.h  gjk.cpp  gjk.h  new_collision.cpp  new_collision.h  shapes.cpp  shapes.h  simplex.cpp  simplex.h  static_grid.cpp  static_grid.h
src/ecs/: ecs.hpp
src/engine/: Actor.cpp  Camera.h  Components.h  EditorDraw.h  EditorStates.cpp  GameWorld.cpp  Island.cpp  NavMesh.h  PatrolComponent.cpp  TagComponent.cpp  WBehaviourTree.h  WBehaviourTreeBuilder.h  WShader.cpp  WShader.h  ai_state_funcs.cpp  engine.cmake  entities.h  triangulate.h
src/game/: comps.h  frame_timer.cpp  frame_timer.h  game.cpp  game.h
src/game/systems/: collision_system.cpp  collision_system.h  draw.cpp  draw.h  fall.cpp  fall.h  flying.cpp  flying.h  input_system.cpp  input_system.h  jumprun.cpp  jumprun.h  move.cpp  move.h
src/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/schemas/: entity.fbs  map.fbs  schemas.cmake  test2.fbs
src/skills/: skills.cmake
src/util/: input.cpp  input.h  input_buffer.h  transform.cpp  transform.h  vec_math.h  w_vec.h
